import org.springframework.boot.gradle.plugin.SpringBootPlugin

import com.github.spotbugs.snom.Confidence
import com.github.spotbugs.snom.Effort
import org.cyclonedx.model.Component

plugins {
	id 'idea'
	id 'org.springframework.boot' version '4.1.0' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'com.github.spotbugs' version '6.5.11' apply false
    id 'info.solidsoft.pitest' version '1.19.0' apply false
	id 'com.diffplug.spotless' version '8.10.1' apply false
	id 'org.owasp.dependencycheck' version '13.0.0' apply false
	id 'com.gorylenko.gradle-git-properties' version '4.0.1'
	id 'com.asarkar.gradle.build-time-tracker' version '5.0.2'
	id 'io.github.ben-manes.versions' version '0.61.0' apply false
	id 'org.cyclonedx.bom' version '3.4.1'
	id 'io.freefair.lombok' version '9.5.0' apply false
	id 'org.gradle.test-retry' version '1.6.5' apply false
}

allprojects {
	repositories {
        mavenCentral()
        google()
    }
}

// Root project has no group of its own (only bootable/library subprojects set one via
// configureBootProject below); set it anyway so the CycloneDX aggregate SBOM's main component
// (the whole application, see the cyclonedxBom config near the bottom of this file) has a
// well-formed identity instead of falling back to "unspecified".
group = 'com.cp'

idea {
	project {
		languageLevel = JavaVersion.VERSION_25
		vcs = 'Git'
	}
}

// Typed SpotBugs enum constants, resolved here since the root script is the only one with a
// compile-time-visible classpath to the plugin (declared with 'apply false' above). Consumed by
// etc/spotbugs.gradle via rootProject.ext to avoid the deprecated String-to-enum coercion that
// Gradle 10 will reject - see upgrading_version_8.html#deprecated_string_to_enum_coercion_for_rich_properties
ext.spotbugsEffort = Effort.DEFAULT
ext.spotbugsReportLevel = Confidence.valueOf('HIGH')

subprojects {
	apply plugin: 'java-library'
	apply plugin: 'io.github.ben-manes.versions'
	apply plugin: 'io.freefair.lombok'
	java {
        sourceCompatibility = 25
        targetCompatibility = 25
	}
	compileJava.options.encoding = 'UTF-8'
	compileTestJava.options.encoding = 'UTF-8'

	rootProject.configureDependencyManagement(project)

	// Pin Lombok to the same version Spring Boot's BOM manages elsewhere in the build, instead of
	// letting io.freefair.lombok default to its own bundled version - keeps every module's
	// annotation-processed sources built with the exact Lombok release the rest of the dependency
	// graph (and dependency-management's version enforcement) already agreed on.
	lombok {
		version = dependencyManagement.managedVersions['org.projectlombok:lombok']
	}

	task sourceJar(type: Jar) {
		from sourceSets.main.allJava
	}

	test {
		useJUnitPlatform()
		// Absolute path so adapter:amqp/adapter:kafka's contract tests can parse etc/asyncapi/asyncapi.yml
		// directly (see AsyncApiSchema in adapter:common's test fixtures) regardless of each module's own
		// working directory - keeping that spec load-bearing (fails the build on drift) rather than just
		// documentation kept in sync by hand.
		systemProperty 'asyncApiSpecPath', rootProject.file('etc/asyncapi/asyncapi.yml').absolutePath
		testLogging {
			events "passed", "skipped", "failed"
			exceptionFormat = 'full'
		}
	}

	gradle.startParameter.continueOnFailure = true
}

def configureDependencyManagement(subproject) {
	configure(subproject) {
		apply plugin: 'io.spring.dependency-management'

		dependencyManagement {
			imports {
				mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.1.3'
				mavenBom SpringBootPlugin.BOM_COORDINATES
				mavenBom 'org.junit:junit-bom:6.1.3'
				mavenBom 'software.amazon.awssdk:bom:2.54.7'
				mavenBom 'org.apache.camel.springboot:camel-spring-boot-bom:4.22.0'
				mavenBom 'org.springframework.ai:spring-ai-bom:2.0.0'
			}
			dependencies {
				dependency 'ch.qos.logback:logback-classic:1.6.3'
				dependency 'ch.qos.logback:logback-core:1.6.3'
				dependency 'com.fasterxml.jackson.core:jackson-annotations:2.22'
				dependency 'com.fasterxml.jackson.core:jackson-core:2.22.2'
				dependency 'com.fasterxml.jackson.core:jackson-databind:2.22.2'
				dependency 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.22.2'
                dependency 'com.google.code.gson:gson:2.14.0'
                dependency 'com.google.guava:guava:33.7.1-jre'
                dependency 'com.icegreen:greenmail-junit5:2.1.13'
				dependency 'com.h2database:h2:2.4.240'
				dependency 'com.sun.activation:jakarta.activation:2.0.1'
				dependency 'com.sun.istack:istack-commons-runtime:4.2.0'
				dependency 'com.sun.mail:jakarta.mail:2.0.2'
				dependency 'com.tngtech.archunit:archunit:1.5.0'
				dependency 'io.github.resilience4j:resilience4j-circuitbreaker:2.4.0'
				dependency 'io.github.resilience4j:resilience4j-core:2.4.0'
				dependency 'io.github.resilience4j:resilience4j-micrometer:2.4.0'
				dependency 'io.github.resilience4j:resilience4j-ratelimiter:2.4.0'
				dependency 'io.github.resilience4j:resilience4j-retry:2.4.0'
				dependency 'jakarta.persistence:jakarta.persistence-api:3.2.0'
                dependency 'jakarta.transaction:jakarta.transaction-api:2.0.1'
                dependency 'jakarta.validation:jakarta.validation-api:3.1.1'
				dependency 'javax.cache:cache-api:1.1.1'
				dependency 'org.apache.commons:commons-lang3:3.20.0'
				dependency 'org.apache.logging.log4j:log4j-api:2.25.4'
				dependency 'org.apache.logging.log4j:log4j-to-slf4j:2.25.4'
				dependency 'org.apache.tomcat.embed:tomcat-embed-core:11.0.25'
				dependency 'org.apache.tomcat.embed:tomcat-embed-jasper:11.0.25'
				dependency 'org.apache.tomcat.embed:tomcat-embed-websocket:11.0.25'
				dependency 'org.apache.xmlgraphics:fop-core:2.11'
				dependency 'org.apache.xmlgraphics:xmlgraphics-commons:2.11'
				dependency 'org.assertj:assertj-core:3.27.7'
				dependency 'org.eclipse.jetty.ee10:jetty-ee10-servlet:12.1.12'
				dependency 'org.eclipse.jetty.ee10:jetty-ee10-servlets:12.1.12'
				dependency 'org.eclipse.jetty.ee10:jetty-ee10-webapp:12.1.12'
				dependency 'org.ehcache:ehcache:3.12.0'
				dependency 'org.hamcrest:hamcrest:3.0'
				dependency 'org.hibernate.orm:hibernate-core:7.4.1.Final'
				dependency 'org.liquibase:liquibase-core:5.0.4'
				dependency 'org.postgresql:postgresql:42.7.13'
				dependency 'org.springframework.boot:spring-boot-actuator-autoconfigure:4.1.0'
				dependency 'org.springframework.boot:spring-boot-actuator:4.1.0'
				dependency 'org.springframework.boot:spring-boot-autoconfigure:4.1.0'
				dependency 'org.springframework.boot:spring-boot-starter-cache:4.1.0'
				dependency 'org.springframework.boot:spring-boot-test-autoconfigure:4.1.0'
				dependency 'org.springframework.boot:spring-boot-test:4.1.0'
				dependency 'org.springframework.boot:spring-boot:4.1.0'
				dependency 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.1.0'
				dependency 'org.springframework.data:spring-data-commons:4.1.0'
				dependency 'org.springframework.data:spring-data-jpa:4.1.0'
				dependency 'org.springframework.integration:spring-integration-core:7.1.0'
				dependency 'org.springframework.security:spring-security-config:7.1.0'
				dependency 'org.springframework.security:spring-security-core:7.1.0'
				dependency 'org.springframework.security:spring-security-crypto:7.1.0'
				dependency 'org.springframework.security:spring-security-web:7.1.0'
				dependency 'org.springframework:spring-aop:7.0.8'
				dependency 'org.springframework:spring-aspects:7.0.8'
				dependency 'org.springframework:spring-beans:7.0.8'
				dependency 'org.springframework:spring-context-support:7.0.8'
				dependency 'org.springframework:spring-context:7.0.8'
				dependency 'org.springframework:spring-core:7.0.8'
				dependency 'org.springframework:spring-expression:7.0.8'
				dependency 'org.springframework:spring-jcl:7.0.8'
				dependency 'org.springframework:spring-jdbc:7.0.8'
				dependency 'org.springframework:spring-messaging:7.0.8'
				dependency 'org.springframework:spring-orm:7.0.8'
				dependency 'org.springframework:spring-test:7.0.8'
				dependency 'org.springframework:spring-tx:7.0.8'
				dependency 'org.springframework:spring-web:7.0.8'
				dependency 'org.springframework:spring-webmvc:7.0.8'
				dependency 'org.testcontainers:testcontainers-junit-jupiter:2.0.5'
				dependency 'org.testcontainers:testcontainers-postgresql:2.0.5'
				dependency 'org.wiremock:wiremock-jetty12:3.13.2'
				dependency 'xml-apis:xml-apis:1.0.b2'
			}
		}
	}
}

ext.configureBootProject = { subproject, name ->
	configure(subproject) {

		apply plugin: 'org.springframework.boot'
		apply plugin: 'base'

		group = 'com.cp'
		base.archivesName = name

		rootProject.configureDependencyManagement(subproject)
	}
}

ext.configureBootTasks = { subproject ->
	configure(subproject) {

		springBoot {
			buildInfo()
		}

		dependencies {
			developmentOnly 'org.springframework.boot:spring-boot-devtools'
		}
	}
}

ext.configureTestDependencies = { subproject ->
	configure(subproject) {
		dependencies {
			testImplementation('org.springframework.boot:spring-boot-starter-test') {
				exclude group: 'junit', module: 'junit'
				exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
			}

			testImplementation 'org.assertj:assertj-core'
			testImplementation 'org.junit.jupiter:junit-jupiter'
			testImplementation 'org.junit.jupiter:junit-jupiter-api'
			testImplementation 'org.junit.jupiter:junit-jupiter-params'

			testImplementation 'org.mockito:mockito-core:5.23.0'
			testImplementation 'org.mockito:mockito-junit-jupiter:5.23.0'
			testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
		}
	}
}

buildTimeTracker {
	maxWidth = 100
	sortBy = com.asarkar.gradle.buildtimetracker.Sort.DESC
	minTaskDuration = Duration.ofMillis(1)
}

// Aggregate CycloneDX Software Bill of Materials (SBOM) covering every module's resolved
// dependency graph - see https://cyclonedx.org/. Applying the plugin to the root project also
// registers a per-module `cyclonedxDirectBom` task (see application/ecommerce/ecommerce.gradle
// for the deployable jar's own component-type override). Run explicitly with
// `./gradlew cyclonedxBom`; output at build/reports/cyclonedx/bom.json, also published as a CI
// artifact (see .github/workflows/ci.yml).
tasks.cyclonedxBom {
	projectType = Component.Type.APPLICATION
}

wrapper {
	gradleVersion = '9.7.1'
	distributionType = Wrapper.DistributionType.ALL
}
